--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
     <main>
         <div class="gridcontainer">
 
-            <div><img src="Images/Simple Grid/nima-mot-v-bM3PUicaQ-unsplash.jpg" ></div>
-            <div><img src="Images/Simple Grid/steve-johnson-9j2ulLVhqtc-unsplash.jpg"></div>
-            <div><img src="Images/Simple Grid/farid-mardanov-tRXd-Epz4UM-unsplash.jpg"></div>
-            <div><img src="Images/Simple Grid/maksym-tymchyk-xHvQYTQu5cQ-unsplash.jpg"></div>
-            <div><img src="Images/Simple Grid/brigitte-tohm-5lvgkp_xix8-unsplash.jpg"></div>
-            <div><img src="Images/Simple Grid/red-zeppelin-a4OApzK9KNs-unsplash.jpg"></div>
-            <div><img src="Images/Simple Grid/eiliv-sonas-aceron-dhgE86kI4hk-unsplash.jpg"></div>
-            <div><img src="Images/Simple Grid/anthony-cantin-W_TPved6SLA-unsplash.jpg"></div>
-            <div><img src="Images/Simple Grid/pawel-czerwinski-JsxdCItOk_o-unsplash.jpg"></div>
+            <div><img src="nima-mot-v-bM3PUicaQ-unsplash.jpg" ></div>
+            <div><img src="steve-johnson-9j2ulLVhqtc-unsplash.jpg"></div>
+            <div><img src="farid-mardanov-tRXd-Epz4UM-unsplash.jpg"></div>
+            <div><img src="maksym-tymchyk-xHvQYTQu5cQ-unsplash.jpg"></div>
+            <div><img src="brigitte-tohm-5lvgkp_xix8-unsplash.jpg"></div>
+            <div><img src="red-zeppelin-a4OApzK9KNs-unsplash.jpg"></div>
+            <div><img src="eiliv-sonas-aceron-dhgE86kI4hk-unsplash.jpg"></div>
+            <div><img src="anthony-cantin-W_TPved6SLA-unsplash.jpg"></div>
+            <div><img src="pawel-czerwinski-JsxdCItOk_o-unsplash.jpg"></div>
         
         </div>
 
