--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <main>
         <div class="gridcontainer">
 
-            <div><img src="nima-mot-v-bM3PUicaQ-unsplash.jpg" ></div>
+            <div><img src="img nima-mot-v-bM3PUicaQ-unsplash.jpg" ></div>
             <div><img src="steve-johnson-9j2ulLVhqtc-unsplash.jpg"></div>
             <div><img src="farid-mardanov-tRXd-Epz4UM-unsplash.jpg"></div>
             <div><img src="maksym-tymchyk-xHvQYTQu5cQ-unsplash.jpg"></div>
